# theoria-agents

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEV-PROMPTS.md  Dockerfile  README.md  pyproject.toml  theoria-agent.bat
.specs/: 1-agent-restructuring.md  2-prompt-consolidation-COMPLETE.md  2-prompt-consolidation.md  3-output-management-system.md  4-review-entry-command.md  5-markdown-log-format.md
config/: settings.yaml
prompts/: README.md  __init__.py  loader.py  registry.py
prompts/agents/: assumptions_dependencies.md  equations_symbols.md  information_gatherer.md  metadata_filler.md
prompts/base/: asciimath_rules.md  assumptions_guidelines.md  derivation_quality.md  verification_standards.md
src/: __init__.py  cli.py  dataset.py  entry.py  models.py  orchestrator.py  review_entry.py  validation.py
src/agents/: __init__.py  assembler.py  assumptions_dependencies.py  base.py  derivation.py  equations_symbols.py  information_gatherer.py  metadata_filler.py  researcher.py  reviewer.py  verifier.py
src/llm/: __init__.py  client.py  config.py
src/utils/: __init__.py  agent_logger.py  output_manager.py  validation.py  web_search.py
tests/: __init__.py  test_config.py  test_helpers.py  test_models.py  test_prompt_loading.py
tests/fixtures/: __init__.py  expected_outputs.py  mock_wikipedia_responses.py  sample_topics.py
tests/integration/: __init__.py  test_output_management.py  test_review_entry.py
tests/unit/: test_review_entry.py
tests/unit/agents/: test_assumptions_dependencies.py  test_equations_symbols.py  test_information_gatherer.py  test_metadata_filler.py
tests/unit/models/: test_new_models.py
tests/unit/utils/: test_agent_logger.py  test_output_manager.py
